feat: add more output variables to help develoeprs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,6 +52,9 @@ Metrics/AbcSize:
 Metrics/MethodLength:
   Enabled: false
 
+Metrics/BlockLength:
+  Enabled: false
+
 Metrics/CyclomaticComplexity:
   Enabled: false
 
